tests/ui/wf/wf-enum-fields-struct-variant.stderr
error[E0277]: the trait bound `A: Copy` is not satisfied
  --> $DIR/wf-enum-fields-struct-variant.rs:13:12
   |
LL |         f: IsCopy<A>
   |            ^^^^^^^^^ the trait `Copy` is not implemented for `A`
   |
note: required by a bound in `IsCopy`
  --> $DIR/wf-enum-fields-struct-variant.rs:7:17
   |
LL | struct IsCopy<T:Copy> {
   |                 ^^^^ required by this bound in `IsCopy`
help: consider restricting type parameter `A` with trait `Copy`
   |
LL | enum AnotherEnum<A: std::marker::Copy> {
   |                   +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
